--- a/app/src/main/res/layout-w900dp/fragment_photo_search.xml
+++ b/app/src/main/res/layout-w900dp/fragment_photo_search.xml
@@ -75,7 +75,7 @@
 
     <!--
      <com.google.android.material.card.MaterialCardView
-                android:id="@+id/container"
+                android:userID="@+userID/container"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 app:cardElevation="1dp"
@@ -96,7 +96,7 @@
                         android:hint="@string/hint_search">
 
                         <com.google.android.material.textfield.TextInputEditText
-                            android:id="@+id/et_request"
+                            android:userID="@+userID/et_request"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:inputType="text"
@@ -104,7 +104,7 @@
                     </com.google.android.material.textfield.TextInputLayout>
 
                     <com.google.android.material.button.MaterialButton
-                        android:id="@+id/button_search"
+                        android:userID="@+userID/button_search"
                         style="@style/Widget.PhotoSearch.Button"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
@@ -114,13 +114,13 @@
             </com.google.android.material.card.MaterialCardView>
 
             <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/rv_photos"
+                android:userID="@+userID/rv_photos"
                 android:layout_width="0dp"
                 android:layout_height="0dp"
                 android:layout_margin="8dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/container" />
+                app:layout_constraintTop_toBottomOf="@userID/container" />
 
     -->
