--- a/app/src/main/res/menu/main_navigation_menu.xml
+++ b/app/src/main/res/menu/main_navigation_menu.xml
@@ -20,4 +20,8 @@
         android:id="@+id/nav_map"
         android:icon="@drawable/map"
         android:title="@string/menu_title_map" />
+    <item
+        android:id="@+id/nav_loaded_photos"
+        android:icon="@drawable/ic_loaded_photo"
+        android:title="@string/menu_title_loaded_photos"/>
 </menu>
